# OpenCvFaceTrackLean

./: .gitignore  CMakeLists.txt  README.md
WYOpenCv/: CMakeLists.txt  WYOpenCv.cpp  WYOpenCv.h
